k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: library
  namespace: "thelibrary2"
spec:
  type: NodePort
  selector:
    app: library
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
