k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library
  namespace: "thelibrary2"
spec:
  rules:
  - host: library-thelibrary2.apps.na46.prod.nextcle.com
    http:
      paths:
      - backend:
          service:
            name: library
            port:
              number: 3000
        path: /library(/|$)(.*)
